[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zherdev/pdsdbscan-mpi-lib
project_urls =
    Bug Tracker = https://github.com/Zherdev/pdsdbscan-mpi-lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Northwestern University License
    Operating System :: OS Independent

[build_ext]
build-lib=src/pdsdbscanmpilib
